--- a/localisation/english/alicemod_main_l_english.yml
+++ b/localisation/english/alicemod_main_l_english.yml
@@ -5,27 +5,35 @@
  # ###################################
  alicemod_bruteforce_orbital_ring:0 "Early Orbital Ring"
  alicemod_bruteforce_orbital_ring_desc:0 "An early brute force attempt at building an orbital ring."
+ alicemod_bruteforce_orbital_ring_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_ring_desc$"
 
  alicemod_stellar_defense_platfrom_x5:0 "Found small Denfense Platform Fleet"
- alicemod_stellar_defense_platfrom_x25_desc:0 "Create 5 defense platformss orbiting this orbital object."
+ alicemod_stellar_defense_platfrom_x5_desc:0 "Create 5 defense platformss orbiting this orbital object."
+ alicemod_stellar_defense_platfrom_x5_MEGASTRUCTURE_DETAILS:0 "$alicemod_stellar_defense_platfrom_x5_desc$"
 
  alicemod_stellar_defense_platfrom_x25:0 "Found large Defense Platform Fleet"
  alicemod_stellar_defense_platfrom_x25_desc:0 "Create 25 defense platformss orbiting this orbital object."
+ alicemod_stellar_defense_platfrom_x25_MEGASTRUCTURE_DETAILS:0 "$alicemod_stellar_defense_platfrom_x25_desc$"
 
  alicemod_bruteforce_orbital_outpost:0 "Build Outpost"
  alicemod_bruteforce_orbital_outpost_desc:0 "Build an additional Outpost in this system."
+ alicemod_stellar_defense_platfrom_x25_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_outpost_desc$"
 
  alicemod_bruteforce_orbital_starport:0 "Build Starport"
  alicemod_bruteforce_orbital_starport_desc:0 "Build an additional Starport in this system."
+ alicemod_bruteforce_orbital_starport_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_starport_desc$"
 
  alicemod_bruteforce_orbital_starhold:0 "Build Starhold"
  alicemod_bruteforce_orbital_starhold_desc:0 "Build an additional Starhold in this system."
+ alicemod_bruteforce_orbital_starhold_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_starhold_desc$"
 
  alicemod_bruteforce_orbital_starfortress:0 "Build Star Fortress"
  alicemod_bruteforce_orbital_starfortress_desc:0 "Build an additional Star Fortress in this system."
+ alicemod_bruteforce_orbital_starfortress_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_starfortress_desc$"
 
  alicemod_bruteforce_orbital_citadel:0 "Build Citadel"
  alicemod_bruteforce_orbital_citadel_desc:0 "Build an additional Citadel in this system."
+ alicemod_bruteforce_orbital_citadel_MEGASTRUCTURE_DETAILS:0 "$alicemod_bruteforce_orbital_citadel_desc$"
 
 
  ################################
