add second system

--- a/localisation/english/alicemod_main_l_english.yml
+++ b/localisation/english/alicemod_main_l_english.yml
@@ -12,3 +12,6 @@
  #######
  alicemod_sigma_system_initializer_NAME:0 "Remnant Empire (Sigma Prime)"
  alicemod_sigma_system_initializer_DESC:0 "Remnant Empire featuring Ringworlds and other destroyed infrastructure."
+
+ alicemod_theta_system_initializer_NAME:0 "Remnant Empire (Theta Prime)"
+ alicemod_theta_system_initializer_DESC:0 "Remnant Empire featuring Ringworlds and other destroyed infrastructure."
